--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 }
 
 .dad {
-  width: 100vw;
+  width: 97vw;
   height: 100vh;
   background-image: linear-gradient(to right, #ff9dcf 50%, white 50%);
   display: flex;
@@ -22,7 +22,7 @@
 }
 @media (max-width: 991px) {
   .dad {
-    height: 97vh;
+    height: 125vh;
   }
   .container {
     height: 100%;
@@ -37,6 +37,7 @@
   height: calc(100% + 6px);
   background-image: conic-gradient(#ff9dcf 50%, white 50%);
   z-index: -1;
+  box-shadow: -5px 5px 17px -4px black;
 }
 .div {
   position: relative;
@@ -111,8 +112,14 @@
     flex-direction: column-reverse;
   }
 }
+
 .body .left {
   padding-left: 32px;
+}
+@media (max-width: 575px) {
+  .body .left {
+    padding-left: 7px;
+  }
 }
 .body .left h2 {
   font-size: 60px;
@@ -177,7 +184,12 @@
   }
 }
 .body .right .img img {
-  width: 90%;
+  width: 80%;
+}
+@media (min-width: 992px) {
+  .body .right .img img {
+    translate: 25%;
+  }
 }
 
 .body .right .ul ul {
